# gpt_discord_bot

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
.github/workflows/: deploy.yaml
script/: run.sh
src/: lib.rs
src/conf/: mod.rs
src/discord/: bot.rs  error.rs  mod.rs
