[package]
name = "gpt_discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = { version = "1.2.3", features = ["streams"] }
tokio = "1.36.0"
serenity = "0.12.0"
async-trait = "0.1.77"
futures = "0.3.30"
log = "0.4.20"
