[package]
name = "gpt_discord_bot"
version = "0.1.1"
edition = "2021"
authors = ["XIAO YU <xyzmhx@gmail.com>"]
description = "A Discord bot using GPT-4"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = { version = "1.2.3", features = ["streams"] }
tokio = { version = "1", features = ["full"] }
serenity = "0.12.0"
async-trait = "0.1.77"
futures = "0.3.30"
log = "0.4.20"
dotenv = "0.15"
env_logger = "0.11.2"
config = "0.14.0"
url = "2.5.0"
reqwest = "0.12.2"
thiserror = "1.0.0"
